# operate-ai

./: .gitignore  Dockerfile_bkend_app  Dockerfile_ui_app  README.md  agent_cfo.py  aween.py  cfo.py  cfo_sample_graph.py  commands.txt  cursor_sqlite_and_sqlmodel_table_design.md  data.py  exp.py  formulas.md  graph_exp.py  ltv_analysis.py  ltv_scenario.py  ltv_scenario.txt  messages.json  mrr_calculation.py  operateai_scenario1_data.py  pyproject.toml  saas_scenario_ltv_cac_to_ltv.xlsx  saas_scenario_playback_analysis.xlsx  task.md  test_csv_preview.py  test_memory_tools.py  tool_exp.py
.cursor/rules/: cfo-prompt-genericity.mdc  eval-file-consolidation.mdc  eval-file-structure.mdc  eval-query-clarity.mdc  eval-query-patterns.mdc  general.mdc  python-style.mdc  query-verification-workflow.mdc
.windsurf/rules/: general.md  python_style.md
data/: customers.csv  marketing_data.csv  orders.csv  subscription_events.csv  support_tickets.csv  usage_metrics.csv
documents/: operateai_mvp_product_spec.md  operateai_mvp_sow.md  scenario_1.md
evals/scenario1/: Evals.xlsx  README.md  arman_evals.py  arman_evaluation.csv  combine_csvs.py  combined_evaluations.csv  hmm.txt  step1_data_filtering_cohort.py  step1_evals.py  step1_evaluation.csv  step2_arpu_calculation.py  step2_evals.py  step2_evaluation.csv  step3_churn_rate_calculation.py  step3_evals.py  step3_evaluation.csv  step4_evals.py  step4_evaluation.csv  step4_ltv_calculation.py  step5_cac_ltv_analysis.py  step5_evals.py  step5_evaluation.csv
operateai_scenario1_analysis/: ai_cfo_result_operateai_scenario1_analysis_20250506_023323.csv
scenario_queries/: 1.txt  1_sol.md  demo.txt  scenario1-result.md  scenario1-task.tmd  scenario1-task.txt  step2.txt
src/operate_ai/: Customer LTV Analysis.xlsx  __init__.py  agent_cfo.py  api.py  app.py  app_prompt.txt  backend.py  cfo.py  cfo_agent.py  cfo_graph.py  csv_utils.py  evals.py  finn.py  memory_mcp.py  memory_tools.py  preview.py  run_sql_result.json  sdk.py  streamlit_app.py  thinking.py
src/operate_ai/excel_tools/: arithmetic_and_aggregation.py  array_and_dynamic_spill.py  conditional_agg_and_counting.py  financial_functions.py  logical_and_error_handling.py  lookup_and_reference.py  stats_and_trend_analysis.py  text_and_data_management.py
src/operate_ai/prompts/: cfo.md  cfo2.md  cfo_v2.md  collect_slots.md  executor.md  memory.md  planner.md  planning.md  slot_collector.md  task_spec.md  user_interaction.md
src/operate_ai/tools/: __init__.py  arithmetic_and_aggregation.py  array_and_dynamic_spill.py  conditional_agg_and_counting.py  date_time.py  df_tools.py  financial_functions.py  (+4 more)
