[project]
name = "operate-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamza Farhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faker>=37.1.0",
    "fastapi[standard]>=0.115.12",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic-ai>=0.2.6",
    "xlsxwriter>=3.2.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.15.2",
    "duckdb>=1.2.2",
    "tenacity>=9.1.2",
    "openpyxl>=3.1.5",
    "logfire>=3.14.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
    "websocket-client>=1.8.0",
    "fastmcp>=2.3.4",
    "watchdog>=6.0.0",
    "google-genai>=1.18.0",
    "networkx>=3.5",
    "pytest>=8.4.0",
    "matplotlib>=3.10.3",
    "plotly>=6.1.2",
]


[project.scripts]
operate-ai = "operate_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
